rules seem working but very slow

--- a/GPUOpenCLProject1/GPUOpenCLProject1.vcxproj.filters
+++ b/GPUOpenCLProject1/GPUOpenCLProject1.vcxproj.filters
@@ -84,5 +84,6 @@
     <None Include="orig.cpp.bak">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
